# tensorflow-mtcnn

cpp/standalone/: CMakeLists.txt  Makefile  README.md  camera.cpp  comm_lib.cpp  comm_lib.hpp  dtype.h  facenet.cpp  facenet.h  facenet_tf.cpp  facenet_tf.h  jni_common.cpp  jni_common.hpp  jni_types.hpp  mtcnn.hpp  opencv_utils.cpp  opencv_utils.h  opencv_utils.hpp  tensorflow_mtcnn.cpp  tensorflow_mtcnn.hpp  test.cpp  testjni.cpp  tf_facenet.cpp  tf_mtcnn.cpp  tf_mtcnn.h  tf_mtcnn.hpp  tf_utils.h  tf_utils.hpp  utils.cpp  utils.hpp
cpp/standalone/opencv330/include/opencv2/: cvconfig.h  opencv_modules.hpp
